update footer and header

--- a/cme-ui/src/app/app.component.html
+++ b/cme-ui/src/app/app.component.html
@@ -1,12 +1,10 @@
-﻿<!-- Footer -->
-<div class="text-center">
-    <p>
-        <a href="" target="_top">Angular 2 Demo</a>
-    </p>
-    <p>
-        <a href="" target="_top">Angular2Demo.com</a>
-    </p>
-</div>
+﻿<header>
+    <div class="text-center">
+        <p>
+            <a href="" target="_top">CME R&D Center</a>
+        </p>
+    </div>
+</header>
 <!-- main app container -->
 <div class="jumbotron">
     <div class="container">
@@ -16,11 +14,10 @@
     </div>
 </div>
 <!-- Footer -->
-<div class="text-center">
-    <p>
-        <a href="" target="_top">Angular 2 Demo</a>
-    </p>
-    <p>
-        <a href="" target="_top">Angular2Demo.com</a>
-    </p>
-</div>
+<footer>
+    <div class="text-center">
+        <p>
+            <a href="" target="_top">Copyright information</a>
+        </p>
+    </div>
+</footer>
