update header & footer

--- a/cme-ui/src/app/app.component.html
+++ b/cme-ui/src/app/app.component.html
@@ -1,8 +1,10 @@
 ﻿<header>
-    <div class="text-center">
-        <p>
-            <a href="" target="_top">CME R&D Center</a>
-        </p>
+    <div class="row">
+        <div class="col-lg-12 text-center">
+            <h4 class="white">
+                <p>CME R&D Center</p>
+            </h4>
+        </div>
     </div>
 </header>
 <!-- main app container -->
@@ -15,9 +17,11 @@
 </div>
 <!-- Footer -->
 <footer>
-    <div class="text-center">
-        <p>
-            <a href="" target="_top">Copyright information</a>
-        </p>
+    <div class="row">
+        <div class="col-lg-12 text-center">
+            <h4 class="white">
+                <p>Copyright &copy; <a href="https://chsakell.com" target="_blank">information</a></p>
+            </h4>
+        </div>
     </div>
 </footer>
