--- a/cme-ui/src/app/authenticated/admin/admin.component.html
+++ b/cme-ui/src/app/authenticated/admin/admin.component.html
@@ -2,16 +2,16 @@
     <thead>
     <tr>
         <th style="width: 20%">
-            <mfDefaultSorter by="name">Name</mfDefaultSorter>
+            <mfDefaultSorter by="firstname">First Name</mfDefaultSorter>
         </th>
         <th style="width: 50%">
-            <mfDefaultSorter by="email">Email</mfDefaultSorter>
+            <mfDefaultSorter by="lastname">Last Name</mfDefaultSorter>
         </th>
         <th style="width: 10%">
-            <mfDefaultSorter by="age">Age</mfDefaultSorter>
+            <mfDefaultSorter by="username">User Name</mfDefaultSorter>
         </th>
         <th style="width: 20%">
-            <mfDefaultSorter by="city">City</mfDefaultSorter>
+            <mfDefaultSorter by="password">Password</mfDefaultSorter>
         </th>
     </tr>
     </thead>
