--- a/cme-ui/src/app/app.component.html
+++ b/cme-ui/src/app/app.component.html
@@ -20,7 +20,7 @@
     <div class="row">
         <div class="col-lg-12 text-center">
             <h4 class="white">
-                <p>Copyright &copy; <a href="https://chsakell.com" target="_blank">information</a></p>
+                <p>Copyright &copy; <a href="https://chsakell.com" target="_blank">CME Research & Development Center</a></p>
             </h4>
         </div>
     </div>
