--- a/cme-ui/src/app/authenticated/admin/admin.component.html
+++ b/cme-ui/src/app/authenticated/admin/admin.component.html
@@ -18,7 +18,8 @@
         </thead>
         <tbody>
         <tr *ngFor="let item of mf.data">
-            <td><a (click)="userDetailedModal.open()">{{item.userName}}</a></td>
+            <td><a (click)="onClick()">{{item.userName}}</a></td>
+            <td>{{item.userName}}</td>
             <td>{{item.password | uppercase}}</td>
             <td>{{item.firstName}}</td>
             <td>{{item.lastName}}</td>
@@ -32,18 +33,4 @@
         </tr>
         </tfoot>
     </table>
-</div>
-
-<div class="row">
-    <modal #userDetailedModal [closeOnEscape]="false" [closeOnOutsideClick]="false">
-        <modal-header>
-            <h1>I am third modal</h1>
-        </modal-header>
-        <modal-content>
-            You cannot close this modal by pressing "ESC" button or clicking outside of the modal.
-        </modal-content>
-        <modal-footer>
-            <button class="btn btn-primary" (click)="userDetailedModal.close()">okay!</button>
-        </modal-footer>
-    </modal>
 </div>
