--- a/cme-ui/src/app/authenticated/admin/admin.component.html
+++ b/cme-ui/src/app/authenticated/admin/admin.component.html
@@ -37,12 +37,12 @@
 
 
 <div class="row">
-    <modal #userDetailedModal [closeOnEscape]="false" [closeOnOutsideClick]="false">
+    <modal #userDetailedModal [closeOnEscape]="false" [closeOnOutsideClick]="false" (onOpen)="showUserDetailedByUserName()">
         <modal-header>
             <h1>I am third modal</h1>
         </modal-header>
         <modal-content>
-            You cannot close this modal by pressing "ESC" button or clicking outside of the modal.
+            {{userList[0].firstName}}
         </modal-content>
         <modal-footer>
             <button class="btn btn-primary" (click)="userDetailedModal.close()">okay!</button>
