--- a/cme-ui/src/app/register/register.component.html
+++ b/cme-ui/src/app/register/register.component.html
@@ -1,6 +1,6 @@
 ﻿<div class="col-md-6 col-md-offset-3">
-    <h2>Register</h2>
-    <form name="form" (ngSubmit)="f.form.valid && register()" #f="ngForm" novalidate>
+    <h2>Register New Account</h2>
+    <form name="form" (ngSubmit)="f.form.valid && registerNewAccount()" #f="ngForm" novalidate>
         <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !username.valid }">
             <label for="firstName">First Name</label>
             <input type="text" class="form-control" name="firstName" [(ngModel)]="model.firstName" #firstName="ngModel" required />
